--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,8 @@ java {
 	sourceCompatibility = '17'
 }
 
+
+
 configurations {
 	compileOnly {
 		extendsFrom annotationProcessor
@@ -30,6 +32,18 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
+
+task createTargetDir {
+	doLast {
+		file('target').mkdirs()
+	}
+}
+
+tasks.named('build') {
+	dependsOn createTargetDir
+}
+
+
 
 tasks.named('bootBuildImage') {
 	builder = 'paketobuildpacks/builder-jammy-base:latest'
