--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -13,7 +13,7 @@ jobs:
         with:
           java-version: 17
           distribution: 'adopt'  # or 'temurin' or 'zulu'
-      
+
 
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
@@ -38,6 +38,6 @@ jobs:
           ECR_REPOSITORY: catchroom
         run: |
           docker build -t tag_name .
-          docker tag image_name ${{ env.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}:latest
-          docker tag image_name ${{ env.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}:${{ github.sha }}
+          docker tag tag_name ${{ env.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}:latest
+          docker tag tag_name ${{ env.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}:${{ github.sha }}
           docker push ${{ env.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }} --all-tags
