--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -21,23 +21,22 @@ jobs:
       - name: Build with Gradle
         run: ./gradlew build
 
-      - name: Configure AWS credentials
+          # Jar 파일 copy
+      - name: Copy Jar
+        run: cp ./build/libs/*.jar ./deploy/
+
+          # 압축파일 형태로 전달
+      - name: Make zip file
+        run: zip -r -qq -j ./[PROJECT_NAME].zip ./deploy
+
+# S3 Bucket으로 Upload
+      - name: Deploy
         uses: aws-actions/configure-aws-credentials@v1
         with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ap-northeast-2
+         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }}
+         aws-secret-access-key: ${{ secrets.AWS_SECRET_KEY }}
+         aws-region: ap-northeast-2
 
-      - name: Login to Amazon ECR
-        id: login-ecr
-        uses: aws-actions/amazon-ecr-login@v1
-
-      - name: push base image
-        env:
-          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          ECR_REPOSITORY: catchroom
-        run: |
-          docker build -t tag_name .
-          docker tag tag_name ${{ env.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}:latest
-          docker tag tag_name ${{ env.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}:${{ github.sha }}
-          docker push ${{ env.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }} --all-tags
+# S3 Bucket으로 copy
+      - name: Deliver to AWS S3
+        run: aws s3 cp --region ap-northeast-2 --acl private ./[PROJECT_NAME].zip s3://catchroom-bucket/
