--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -20,7 +20,9 @@ jobs:
 
       - name: Build with Gradle
         run: ./gradlew build
-
+      # 전송할 파일을 담을 디렉토리 생성
+      - name: Make Directory for deliver
+        run: mkdir deploy
           # Jar 파일 copy
       - name: Copy Jar
         run: cp ./build/libs/*.jar ./deploy/
@@ -28,6 +30,8 @@ jobs:
           # 압축파일 형태로 전달
       - name: Make zip file
         run: zip -r -qq -j ./[PROJECT_NAME].zip ./deploy
+
+
 
 # S3 Bucket으로 Upload
       - name: Deploy
