--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -29,11 +29,11 @@ jobs:
           # Jar 파일 copy
       - name: Copy Jar
         run: cp ./build/libs/*.jar ./deploy/
-        
+
       - name: Copy appspec and deploy script
         run: |
-          cp ./path/to/appspec.yml ./deploy/
-          cp ./path/to/deploy.sh ./deploy/  
+          cp ./appspec.yml ./deploy/
+          cp ./deploy.sh ./deploy/  
 
           # 압축파일 형태로 전달
       - name: Make zip file
