--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,12 @@ dependencies {
 	runtimeOnly 'com.mysql:mysql-connector-j'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	//aws secretkey 사용을 위한 의존성 추가
+	implementation 'com.amazonaws.secretsmanager:aws-secretsmanager-jdbc:1.0.6'
+
+	//jpa 사용을 위한 의존성 추가
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'com.h2database:h2'
 }
 
 task createTargetDir {
