--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@
 #spring.datasource.username=
 #spring.datasource.password=
 
-spring.datasource.url=jdbc:mysql://catchroom-db.c1aeg6a0abt3.ap-northeast-2.rds.amazonaws.com:3306/catchroom-db?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://catchroom-db.c1aeg6a0abt3.ap-northeast-2.rds.amazonaws.com:3306/CatchRoomdb?useSSL=false&serverTimezone=UTC
 spring.datasource.driver-class-name=com.amazonaws.secretsmanager.sql.AWSSecretsManagerMySQLDriver
 spring.datasource.username=dev/secrets-manager-rds/mysql
 
