--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@
 
 spring.datasource.url=jdbc:mysql://catchroom-db.c1aeg6a0abt3.ap-northeast-2.rds.amazonaws.com:3306/CatchRoomdb?useSSL=false&serverTimezone=UTC
 spring.datasource.driver-class-name=com.amazonaws.secretsmanager.sql.AWSSecretsManagerMySQLDriver
-spring.datasource.username=dev/secrets-manager-rds/mysql
+spring.datasource.username=admin
 
 
 # Hibernate ??
