--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,9 +5,9 @@
 #spring.datasource.username=
 #spring.datasource.password=
 
-spring.datasource.url=jdbc:mysql://catchroom-db.c1aeg6a0abt3.ap-northeast-2.rds.amazonaws.com:3306/CatchRoomdb?useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc-secretsmanager:mysql://HOST:3306/CatchRoomdb
 spring.datasource.driver-class-name=com.amazonaws.secretsmanager.sql.AWSSecretsManagerMySQLDriver
-spring.datasource.username=admin
+spring.datasource.username=Catchroom-RDS-secertKey
 
 
 # Hibernate ??
