--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,8 @@ dependencies {
 	implementation 'org.springframework.cloud:spring-cloud-starter-bootstrap:3.1.3'
 	implementation 'org.springframework.cloud:spring-cloud-starter-aws-secrets-manager-config:2.2.6.RELEASE'
 	implementation 'com.amazonaws.secretsmanager:aws-secretsmanager-jdbc:1.0.8'
+	implementation 'com.amazonaws:aws-java-sdk-secretsmanager:1.11.1005'
+
 	//jpa 사용을 위한 의존성 추가
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'com.h2database:h2'
