--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,12 @@
 
-# ?????? ?? ??
-#???? RDS ???? ??,?? ??? ????? ?? ?? ?? ? ?? ??????.
+#DB ?? ??
 #spring.datasource.url=jdbc:mysql://catchroom-db.c1aeg6a0abt3.ap-northeast-2.rds.amazonaws.com:3306/CatchRoomdb?useSSL=false&serverTimezone=UTC
 #spring.datasource.username=
 #spring.datasource.password=
 
-spring.datasource.url=jdbc-secretsmanager:mysql://HOST:3306/CatchRoomdb
-spring.datasource.driver-class-name=com.amazonaws.secretsmanager.sql.AWSSecretsManagerMySQLDriver
+spring.datasource.url=jdbc-secretsmanager:mysql://catchroom-db.c1aeg6a0abt3.ap-northeast-2.rds.amazonaws.com:3306/CatchRoomdb
 spring.datasource.username=catchroom-rds-secretkey
+spring.datasource.driver-class-name=com.amazonaws.secretsmanager.sql.AWSSecretsManagerMySQLDriver
 
 
 # Hibernate ??
