--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,8 @@
-
-#DB ?? ??
-#spring.datasource.url=jdbc:mysql://catchroom-db.c1aeg6a0abt3.ap-northeast-2.rds.amazonaws.com:3306/CatchRoomdb?useSSL=false&serverTimezone=UTC
-#spring.datasource.username=
-#spring.datasource.password=
-
-spring.datasource.url=jdbc-secretsmanager:mysql://catchroom-db.c1aeg6a0abt3.ap-northeast-2.rds.amazonaws.com:3306/CatchRoomdb
-spring.datasource.username=Catchroom-RDS-secertKey
-spring.datasource.driver-class-name=com.amazonaws.secretsmanager.sql.AWSSecretsManagerMySQLDriver
+spring.datasource.url=jdbc:mysql://catchroom-db.c1aeg6a0abt3.ap-northeast-2.rds.amazonaws.com:3306/CatchRoomdb?useSSL=false&serverTimezone=UTC
+spring.datasource.username=admin
+spring.datasource.password=qkrrjsdn1!
 
 
-# Hibernate ??
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
