--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,10 +1,13 @@
 spring:
   application:
     name: catchroom
-
-datasource:
-  hikari:
+  datasource:
+   hikari:
     master:
       jdbc-url: jdbc-secretsmanager:mysql://catchroomdb.c1aeg6a0abt3.ap-northeast-2.rds.amazonaws.com:3306/catchroomdb
       user-name: arn:aws:secretsmanager:ap-northeast-2:173896545512:secret:catchroom-secret-manager-kpoTZw
       driver-class-name: com.amazonaws.secretsmanager.sql.AWSSecretsManagerMySQLDriver
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
