--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
     name: catchroom
   datasource:
     url: jdbc-secretsmanager:mysql://catchroomdb.c1aeg6a0abt3.ap-northeast-2.rds.amazonaws.com:3306/catchroomdb
-    username: arn:aws:secretsmanager:ap-northeast-2:173896545512:secret:catchroom-secret-manager-kpoTZw
+    username: catchroom-secret-manager
     driver-class-name: com.amazonaws.secretsmanager.sql.AWSSecretsManagerMySQLDriver
   jpa:
     hibernate:
