--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,8 +13,8 @@ log:
   slack:
     enabled: true
     channel: #error
-    web-hook-url: ${{secrets.SLACK_WEBHOOK_URI}}
- 
+    web-hook-url: ${SLACK_WEBHOOK_URI}
+
   database:
     enabled: true
 
