--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -23,8 +23,7 @@ jobs:
 
       - name: Build with Gradle
         run: ./gradlew build --scan
-        env:
-          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URI}}
+
       # 전송할 파일을 담을 디렉토리 생성
       - name: Make Directory for deliver
         run: mkdir deploy
@@ -37,9 +36,12 @@ jobs:
           cp ./appspec.yml ./deploy/
           cp ./deploy.sh ./deploy/  
 
-          # 압축파일 형태로 전달
+        # 압축파일 형태로 전달
       - name: Make zip file
         run: zip -r -qq -j ./$GITHUB_SHA.zip ./deploy
+        # 슬랙 webhook 환경변수 사용가능
+      - name: Set Slack Webhook URI as Environment Variable
+        run: echo "SLACK_WEBHOOK_URI=${{ secrets.SLACK_WEBHOOK_URI }}" >> $GITHUB_ENV
 
 
 
