--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -72,8 +72,9 @@ jobs:
 
       - name: Code Deploy
         run: |
-            aws deploy create-deployment \
-            --deployment-config-name CodeDeployDefault.AllAtOnce \
-            --application-name ${{ env.CODE_DEPLOY_APPLICATION_NAME }} \
-            --deployment-group-name ${{ env.CODE_DEPLOY_DEPLOYMENT_GROUP_NAME }} \
-            --s3-location bucket=catchroom-bucket,bundleType=zip,key=$GITHUB_SHA.zip  
+          aws deploy create-deployment \
+           --deployment-config-name CodeDeployDefault.AllAtOnce \
+           --application-name ${{ env.CODE_DEPLOY_APPLICATION_NAME }} \
+           —deployment-group-name ${{ env.CODE_DEPLOY_DEPLOYMENT_GROUP_NAME }} \
+           —s3-location bucket=catchroom-bucket,bundleType=zip,key=$GITHUB_SHA.zip \
+           —environment-variables SLACK_WEBHOOK_URI=${SLACK_WEBHOOK_URI}
