--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,6 +9,7 @@ spring:
     hibernate:
       ddl-auto: update
     show-sql: true
+# 로컬에서는 해당 부분 level까지는 주석처리 ,배포할때는 풀고 배포
 log:
   slack:
     enabled: true
