--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -6,7 +6,9 @@ env:
   CODE_DEPLOY_APPLICATION_NAME: CatchRoom-deploy
   CODE_DEPLOY_DEPLOYMENT_GROUP_NAME: CatchRoom-Codedeployment
   MY_ENV_VARIABLE: 'my-value'  # Here is where we add the new environment variable.
-  SLACK_WEBHOOK_URI: ${{ secrets.SLACK_WEBHOOK_URI }} # Add this line
+  SLACK_WEBHOOK_URI: ${{ secrets.SLACK_WEBHOOK_URI }}
+  GOOGLE_CLIENT_ID: ${{ secrets.GOOGLE_CLIENT_ID }}
+  GOOGLE_CLIENT_SECRET: ${{ secrets.GOOGLE_CLIENT_SECRET }}
 jobs:
   deploy:
     runs-on: ubuntu-latest
