--- a/build.gradle
+++ b/build.gradle
@@ -45,6 +45,9 @@ dependencies {
 	implementation group: 'eu.bitwalker', name: 'UserAgentUtils', version: '1.17'
 	implementation group: 'com.slack.api', name: 'slack-api-client', version: '1.35.0'
 
+	//Oauth 의존성 추가
+	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+
 
 
 
