--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,3 @@
-google.client.id=344163251293-dmljgqnt5fg95sp7t4gmi4vo6paj3ebt.apps.googleusercontent.com
-google.client.secret=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
+GOOGLE_CLIENT_ID=344163251293-dmljgqnt5fg95sp7t4gmi4vo6paj3ebt.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
+GOOGLE_LOGIN_REDIRECT_URL=https://lo calhost:3000/login/loading
