--- a/build.gradle
+++ b/build.gradle
@@ -45,6 +45,9 @@ dependencies {
 	implementation group: 'eu.bitwalker', name: 'UserAgentUtils', version: '1.17'
 	implementation group: 'com.slack.api', name: 'slack-api-client', version: '1.35.0'
 
+	//jackson 의존성 추가
+	implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.3'
+
 
 
 
