--- a/build.gradle
+++ b/build.gradle
@@ -38,7 +38,7 @@ dependencies {
 
 	//jpa 사용을 위한 의존성 추가
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	implementation 'com.h2database:h2'
+//	implementation 'com.h2database:h2'
 
 	//slack montionring 의존성 추가
 	implementation 'com.github.maricn:logback-slack-appender:1.6.1'
@@ -48,6 +48,10 @@ dependencies {
 	//jackson 의존성 추가
 	implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.3'
 
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+	testImplementation 'org.springframework.security:spring-security-test'
+	implementation 'com.auth0:java-jwt:4.4.0'
 
 
 
