Feat : RDS 변경 및 일반 회원 로그인 API

--- a/build.gradle
+++ b/build.gradle
@@ -48,6 +48,19 @@ dependencies {
 	//jackson 의존성 추가
 	implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.3'
 
+	//@valid를 사용하기 위한 의존성 추가
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
+
+	//swagger 사용하기 위한 의존성 추가
+	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2'
+
+	//security를 사용하기 위한 의존성 추가
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+
+	//JWT Token을 만들기 위한 의존성 추가
+	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
+	implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
+	implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'
 
 
 
