--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -25,6 +25,9 @@ jobs:
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
 
+      - name: Clean with Gradle
+        run: ./gradlew clean
+
       - name: Build with Gradle
         run: ./gradlew build --scan
 
