--- a/build.gradle
+++ b/build.gradle
@@ -69,6 +69,9 @@ dependencies {
 	annotationProcessor 'jakarta.annotation:jakarta.annotation-api'
 	annotationProcessor 'jakarta.persistence:jakarta.persistence-api'
 
+	//Redis 사용을 위한 의존성 추가
+	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+
 }
 
 task createTargetDir {
