fixed untracked files

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,7 +16,7 @@ spring:
     redis:
       host: ec2-3-39-74-198.ap-northeast-2.compute.amazonaws.com
       port: 6379
-      password: ${REDIS_PASSWORD}
+      password: qkrrjsdn1!
 
 
 
